feat: update DishJpaAdapter and OrderJpaAdapter to use Stream.toList() for improved readability; add getOrdersByStatusAndRestaurantId method in OrderJpaAdapter